<resources>

    <string name="app_name">Breathing System</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Breathing Rate System</string>
    <string name="title_activity_display_message">Authenticate User</string>
    <string name="number_respiratory">Number of respiratory</string>
    <string name="button_add">Add</string>

    <!-- values for register page -->
    <string name="title_activity_register">Register</string>

    <!-- values for authentication -->
    <string name="user_name">User Name</string>
    <string name="password">Password</string>

    <!-- values for patient -->
    <string name="title">Title</string>
    <string name="firstName">FirstName</string>
    <string name="lastName">LastName</string>
    <string name="title_activity_breathing"></string>
    <string name="title_activity_patient"></string>
    <string name="title_activity_graphing"></string>
    <string name="title_activity_patients_list_graph">Patient Lists</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_post_login">Choose Activity</string>
    <string name="menu_breathing_record">Record Breathing</string>
    <string name="menu_view_data">View History</string>
    <string name="menu_home">Home</string>

</resources>